# shcl

./: .gitignore  .markdownlint-cli2.jsonc  README.md  changelog.md  code_of_conduct.md  contributing.md  install-dev.bash  install.bash  install.ps1  license.md  rust-toolchain.toml  style-guide.md  todo.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
cicd/: cicd.bash  config.bash  demo-scenario.toml
cicd/demo/: app.shcl
cicd/packaging/: nfpm.yaml  shcl.nsi
cicd/utility/: crosscheck.bash  flame-report.py  gen-demo-gif.py  n8git_backup-and-publish  package.bash
project/: backlog.md  design.md  grammar.abnf  spec.md
project/conformance/: README.md
project/conformance/001-messy-cities/: expected-diags.txt  expected.shcl  input.shcl  reads.tsv
project/conformance/002-stacked-array/: expected-diags.txt  expected.shcl  input.shcl  reads.tsv
project/conformance/003-coercions/: expected.shcl  reads.tsv
project/conformance/004-strict-load/: expected-diags.txt  expected.shcl  input.shcl  reads.tsv
project/conformance/005-raw-blocks/: expected.shcl  input.shcl  reads.tsv
project/conformance/006-comma-edges/: expected.shcl  input.shcl  reads.tsv
project/conformance/007-dates/: expected.shcl  input.shcl  reads.tsv
project/conformance/008-typed-arrays/: expected.shcl  reads.tsv
project/conformance/009-wildcard-slots/: expected.shcl  input.shcl  reads.tsv
project/conformance/010-mixed-star/: expected-diags.txt  expected.shcl  input.shcl  reads.tsv
project/conformance/011-array-selector/: expected.shcl  input.shcl  reads.tsv
project/conformance/012-raw-info/: expected.shcl  input.shcl  reads.tsv
project/conformance/013-comments/: expected-diags.txt  expected.shcl  input.shcl  reads.tsv
project/conformance/014-write-build/: expected-write.shcl  write.ops
project/conformance/015-write-edit/: expected-diags.txt  expected-write.shcl  expected.shcl  reads.tsv  write.ops
project/conformance/016-write-raw-escapes/: expected-write.shcl  reads.tsv  write.ops
project/conformance/017-nul-merge-key/: expected-diags.txt  expected.shcl  input.shcl  (+1 more)
source/bash/: shcl.bash
source/c/: shcl.h  shcl.hpp
source/go/: go.mod  shcl.go  shcl_test.go
source/powershell/: shcl.ps1
source/python/: shcl.py
source/rust/: Cargo.toml
source/rust/src/: lib.rs  main.rs
source/rust/tests/: conformance.rs  fuzz_smoke.rs
(+31 files in other folders)
